commands update